app/globals.css
@import "tailwindcss";
@import "tw-animate-css";

@custom-variant dark (&:is(.dark *));

html, body {
	margin: 0;
	padding: 0;
	overflow-x: hidden;
}

@theme inline {
	--color-background: var(--background);
	--color-foreground: var(--foreground);
	--font-sans: Inter, sans-serif;
	--font-mono: JetBrains Mono, monospace;
	--color-sidebar-ring: var(--sidebar-ring);
	--color-sidebar-border: var(--sidebar-border);
	--color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
	--color-sidebar-accent: var(--sidebar-accent);
	--color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
	--color-sidebar-primary: var(--sidebar-primary);
	--color-sidebar-foreground: var(--sidebar-foreground);
	--color-sidebar: var(--sidebar);
	--color-chart-5: var(--chart-5);
	--color-chart-4: var(--chart-4);
	--color-chart-3: var(--chart-3);
	--color-chart-2: var(--chart-2);
	--color-chart-1: var(--chart-1);
	--color-ring: var(--ring);
	--color-input: var(--input);
	--color-border: var(--border);
	--color-destructive: var(--destructive);
	--color-accent-foreground: var(--accent-foreground);
	--color-accent: var(--accent);
	--color-muted-foreground: var(--muted-foreground);
	--color-muted: var(--muted);
	--color-secondary-foreground: var(--secondary-foreground);
	--color-secondary: var(--secondary);
	--color-primary-foreground: var(--primary-foreground);
	--color-primary: var(--primary);
	--color-popover-foreground: var(--popover-foreground);
	--color-popover: var(--popover);
	--color-card-foreground: var(--card-foreground);
	--color-card: var(--card);
	--radius-sm: calc(var(--radius) - 4px);
	--radius-md: calc(var(--radius) - 2px);
	--radius-lg: var(--radius);
	--radius-xl: calc(var(--radius) + 4px);
	--font-serif: Montserrat, sans-serif;
	--radius: 0.375rem;
	--tracking-tighter: calc(var(--tracking-normal) - 0.05em);
	--tracking-tight: calc(var(--tracking-normal) - 0.025em);
	--tracking-wide: calc(var(--tracking-normal) + 0.025em);
	--tracking-wider: calc(var(--tracking-normal) + 0.05em);
	--tracking-widest: calc(var(--tracking-normal) + 0.1em);
	--tracking-normal: var(--tracking-normal);
	--shadow-2xl: var(--shadow-2xl);
	--shadow-xl: var(--shadow-xl);
	--shadow-lg: var(--shadow-lg);
	--shadow-md: var(--shadow-md);
	--shadow: var(--shadow);
	--shadow-sm: var(--shadow-sm);
	--shadow-xs: var(--shadow-xs);
	--shadow-2xs: var(--shadow-2xs);
	--spacing: var(--spacing);
	--letter-spacing: var(--letter-spacing);
	--shadow-offset-y: var(--shadow-offset-y);
	--shadow-offset-x: var(--shadow-offset-x);
	--shadow-spread: var(--shadow-spread);
	--shadow-blur: var(--shadow-blur);
	--shadow-opacity: var(--shadow-opacity);
	--color-shadow-color: var(--shadow-color);
	--color-destructive-foreground: var(--destructive-foreground);
}

:root {
	--radius: 0.375rem;
	--background: oklch(1 0 0);
	--foreground: oklch(0.2686 0 0);
	--card: oklch(1 0 0);
	--card-foreground: oklch(0.2686 0 0);
	--popover: oklch(1 0 0);
	--popover-foreground: oklch(0.2686 0 0);
	--primary: oklch(0.7686 0.1647 70.0804);
	--primary-foreground: oklch(0 0 0);
	--secondary: oklch(0.967 0.0029 264.5419);
	--secondary-foreground: oklch(0.4461 0.0263 256.8018);
	--muted: oklch(0.9846 0.0017 247.8389);
	--muted-foreground: oklch(0.551 0.0234 264.3637);
	--accent: oklch(0.9869 0.0214 95.2774);
	--accent-foreground: oklch(0.4732 0.1247 46.2007);
	--destructive: oklch(0.6368 0.2078 25.3313);
	--border: oklch(0.9276 0.0058 264.5313);
	--input: oklch(0.9276 0.0058 264.5313);
	--ring: oklch(0.7686 0.1647 70.0804);
	--chart-1: oklch(0.7686 0.1647 70.0804);
	--chart-2: oklch(0.6658 0.1574 58.3183);
	--chart-3: oklch(0.5553 0.1455 48.9975);
	--chart-4: oklch(0.4732 0.1247 46.2007);
	--chart-5: oklch(0.4137 0.1054 45.9038);
	--sidebar: oklch(0.9846 0.0017 247.8389);
	--sidebar-foreground: oklch(0.2686 0 0);
	--sidebar-primary: oklch(0.7686 0.1647 70.0804);
	--sidebar-primary-foreground: oklch(1 0 0);
	--sidebar-accent: oklch(0.9869 0.0214 95.2774);
	--sidebar-accent-foreground: oklch(0.4732 0.1247 46.2007);
	--sidebar-border: oklch(0.9276 0.0058 264.5313);
	--sidebar-ring: oklch(0.7686 0.1647 70.0804);
	--destructive-foreground: oklch(1 0 0);
	--font-sans: Inter, sans-serif;
	--font-serif: Montserrat, sans-serif;
	--font-mono: JetBrains Mono, monospace;
	--shadow-color: hsl(0 0% 0%);
	--shadow-opacity: 0.1;
	--shadow-blur: 8px;
	--shadow-spread: -1px;
	--shadow-offset-x: 0px;
	--shadow-offset-y: 4px;
	--letter-spacing: 0em;
	--spacing: 0.25rem;
	--shadow-2xs: 0px 4px 8px -1px hsl(0 0% 0% / 0.05);
	--shadow-xs: 0px 4px 8px -1px hsl(0 0% 0% / 0.05);
	--shadow-sm:
		0px 4px 8px -1px hsl(0 0% 0% / 0.1), 0px 1px 2px -2px hsl(0 0% 0% / 0.1);
	--shadow:
		0px 4px 8px -1px hsl(0 0% 0% / 0.1), 0px 1px 2px -2px hsl(0 0% 0% / 0.1);
	--shadow-md:
		0px 4px 8px -1px hsl(0 0% 0% / 0.1), 0px 2px 4px -2px hsl(0 0% 0% / 0.1);
	--shadow-lg:
		0px 4px 8px -1px hsl(0 0% 0% / 0.1), 0px 4px 6px -2px hsl(0 0% 0% / 0.1);
	--shadow-xl:
		0px 4px 8px -1px hsl(0 0% 0% / 0.1), 0px 8px 10px -2px hsl(0 0% 0% / 0.1);
	--shadow-2xl: 0px 4px 8px -1px hsl(0 0% 0% / 0.25);
	--tracking-normal: 0em;
}

.dark {
	--background: oklch(0.1841 0.0823 271.9438);
	--foreground: oklch(1 0 0);
	--card: oklch(0.2769 0.0708 278.4873);
	--card-foreground: oklch(0.9219 0 0);
	--popover: oklch(0.2686 0 0);
	--popover-foreground: oklch(0.9219 0 0);
	--primary: oklch(0.1841 0.0823 271.9438);
	--primary-foreground: oklch(0.9219 0 0);
	--secondary: oklch(0.2769 0.0708 278.4873);
	--secondary-foreground: oklch(1 0 0);
	--muted: oklch(0.3172 0.0742 278.1892);
	--muted-foreground: oklch(0.7155 0 0);
	--accent: oklch(0.3692 0.0584 279.2591);
	--accent-foreground: oklch(1 0 0);
	--destructive: oklch(0.6368 0.2078 25.3313);
	--border: oklch(0.3692 0.0584 279.2591);
	--input: oklch(0.7342 0.0913 279.6846);
	--ring: oklch(0.5594 0.0822 279.2429);
	--chart-1: oklch(0.8844 0.162 178.0408);
	--chart-2: oklch(0.635 0.2301 307.2018);
	--chart-3: oklch(0.5074 0.2542 285.1071);
	--chart-4: oklch(0.3692 0.0584 279.2591);
	--chart-5: oklch(0.2769 0.0708 278.4873);
	--sidebar: oklch(0.1841 0.0823 271.9438);
	--sidebar-foreground: oklch(0.9219 0 0);
	--sidebar-primary: oklch(0.2769 0.0708 278.4873);
	--sidebar-primary-foreground: oklch(1 0 0);
	--sidebar-accent: oklch(0.3876 0.0677 279.4605);
	--sidebar-accent-foreground: oklch(1 0 0);
	--sidebar-border: oklch(0.3692 0.0584 279.2591);
	--sidebar-ring: oklch(0.3692 0.0584 279.2591);
	--destructive-foreground: oklch(1 0 0);
	--radius: 0.375rem;
	--font-sans: Inter, sans-serif;
	--font-serif: Montserrat, sans-serif;
	--font-mono: JetBrains Mono, monospace;
	--shadow-color: hsl(0 0% 0%);
	--shadow-opacity: 0.1;
	--shadow-blur: 8px;
	--shadow-spread: -1px;
	--shadow-offset-x: 0px;
	--shadow-offset-y: 4px;
	--letter-spacing: 0em;
	--spacing: 0.25rem;
	--shadow-2xs: 0px 4px 8px -1px hsl(0 0% 0% / 0.05);
	--shadow-xs: 0px 4px 8px -1px hsl(0 0% 0% / 0.05);
	--shadow-sm:
		0px 4px 8px -1px hsl(0 0% 0% / 0.1), 0px 1px 2px -2px hsl(0 0% 0% / 0.1);
	--shadow:
		0px 4px 8px -1px hsl(0 0% 0% / 0.1), 0px 1px 2px -2px hsl(0 0% 0% / 0.1);
	--shadow-md:
		0px 4px 8px -1px hsl(0 0% 0% / 0.1), 0px 2px 4px -2px hsl(0 0% 0% / 0.1);
	--shadow-lg:
		0px 4px 8px -1px hsl(0 0% 0% / 0.1), 0px 4px 6px -2px hsl(0 0% 0% / 0.1);
	--shadow-xl:
		0px 4px 8px -1px hsl(0 0% 0% / 0.1), 0px 8px 10px -2px hsl(0 0% 0% / 0.1);
	--shadow-2xl: 0px 4px 8px -1px hsl(0 0% 0% / 0.25);
}

@layer base {
	* {
		@apply border-border outline-ring/50;
	}
	body {
		@apply bg-background text-foreground;
		letter-spacing: var(--tracking-normal);
	}
}
@theme {
	/* Custom colors */
	--color-o-bainc-mid: #101569;
	--color-o-bainc-light: #ECF8F7;
	--color-space-dark: #080b36;
	--color-space-mid: #a7b3d1;
	--color-space-light: #d1d8eb;
	--color-glass-bg: #292a41;
	--container-8xl: 87.5rem;
	--background-image-button-green: linear-gradient(
		340deg,
		#0afbd9 0%,
		#0bc9ab 60%,
		#0b977e 100%
	);
	--background-image-bottom-gradient: linear-gradient(
		to bottom,
		var(--color-space-dark) 0%,
		rgb(from var(--color-space-dark) r g b / 0.85) 35%,
		var(--color-space-mid) 70%,
		var(--color-space-light) 100%
	);
	--background-o-bainc-gradient: linear-gradient(to bottom,
				var(--color-space-dark) 0%,
				/* O gradiente começa com a cor escura no topo */
				var(--color-o-bainc-mid) 70%,
				/* Atinge a cor média em 70% da altura, como solicitado */
				var(--color-o-bainc-light) 100%
				/* Termina com a cor clara na base (100%) */
			);
}

@utility glass {
	background-color: rgb(from var(--color-glass-bg) r g b / 0.5);
	backdrop-filter: blur(8px);
}

.btn-gradient-hover {
	position: relative;
	overflow: hidden;
	z-index: 1;
}

.btn-gradient-hover::before {
	content: "";
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;

	background-image: var(--background-image-button-green);

	opacity: 0;

	transition: opacity 200ms ease-in-out;

	z-index: -1;
}

.btn-gradient-hover:hover::before {
	opacity: 1;
}

.btn-solid-hover {
	position: relative;
	overflow: hidden;
	z-index: 1;

	/* O fundo do elemento principal é a cor sólida que APARECERÁ no hover */
	background-color: var(--color-space-dark);
}

/* O pseudo-elemento segura o gradiente, que está VISÍVEL no início */
.btn-solid-hover::before {
	content: "";
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;

	/* O gradiente é aplicado aqui */
	background-image: var(--background-image-button-green); /* Usando a variável que você já tem */

	/* [MUDANÇA PRINCIPAL] Começa visível */
	opacity: 1;

	/* A transição continua na opacidade */
	transition: opacity 200ms ease-in-out;

	z-index: -1;
}

/* [MUDANÇA PRINCIPAL] No hover, o pseudo-elemento DESAPARECE */
.btn-solid-hover:hover::before {
	opacity: 0;
}

